--- a/src/components/InputTips/InputTips.css
+++ b/src/components/InputTips/InputTips.css
@@ -3,6 +3,7 @@
   border: solid 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
+
 .tips__notfound {
   padding: 5px;
   color: #bcbcbc;
@@ -16,7 +17,8 @@
   padding: 5px;
   cursor: pointer;
 }
-.tips__item:first-child {
+
+.tips__item.selected {
   color: #fff;
   background-color: #5199db;
 }
