--- a/src/components/InputTips/InputTips.css
+++ b/src/components/InputTips/InputTips.css
@@ -4,10 +4,28 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.tips__notfound {
+.tips__notfound,
+.tips__loader,
+.tips__error {
   padding: 5px;
   color: #bcbcbc;
 }
+.tips__loader {
+  display: flex;
+  align-items: center;
+}
+
+.tips__loader::before {
+  content: '';
+  display: inline-block;
+  background-color: #bcbcbc;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
 .tips__list {
   list-style: none;
   padding: 0;
@@ -21,4 +39,29 @@
 .tips__item.selected {
   color: #fff;
   background-color: #5199db;
+}
+
+.tips__reload-button {
+  display: block;
+  width: 100%;
+  background-color: #5199db;
+  border: 0;
+  cursor: pointer;
+  text-align: left;
+  color: #fff;
+  font-family: inherit;
+  line-height: inherit;
+  padding: 5px;
+  outline: none;
+}
+
+.tips__specify-message {
+  color: #bcbcbc;
+  padding: 8px 5px;
+  /* font-size: 12px;
+  line-height: 16px; */
+}
+
+.tips__specify-message p {
+  margin: 0;
 }
