--- a/src/components/InputTips/InputTips.css
+++ b/src/components/InputTips/InputTips.css
@@ -18,12 +18,14 @@
 .tips__loader::before {
   content: '';
   display: inline-block;
-  background-color: #bcbcbc;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   vertical-align: middle;
-  margin-right: 5px;
+  margin-right: 3px;
+  background: url('../../icons/preloader-icon.svg') center;
+  background-size: cover;
+  animation: rotation infinite 2s linear;
 }
 
 .tips__list {
@@ -64,4 +66,13 @@
 
 .tips__specify-message p {
   margin: 0;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
