--- a/src/components/InputTips/InputTips.css
+++ b/src/components/InputTips/InputTips.css
@@ -2,6 +2,8 @@
   width: 320px;
   border: solid 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 100%;
 }
 
 .tips__notfound,
@@ -59,9 +61,9 @@
 
 .tips__specify-message {
   color: #bcbcbc;
-  padding: 8px 5px;
-  /* font-size: 12px;
-  line-height: 16px; */
+  padding: 5px 5px 15px;
+  font-size: 12px;
+  line-height: 16px;
 }
 
 .tips__specify-message p {
