--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,11 @@ html {
 * {
   box-sizing: border-box;
 }
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
